<resources>
    <string name="app_name">Quiz Perfil de Investidor</string>

    <!-- Main Activity -->

    <string name="main_title">Descubra seu Perfil de Investidor</string>
    <string name="main_name_hint">Digite seu nome</string>
    <string name="main_start_btn">Iniciar Questionário</string>
    <string name="main_disclaimer">A metodologia utilizada neste teste foi adaptada do questionário criado pelo Banco Paulista, acessível pelo endereço https://www.bancopaulista.com.br/Arquivos/QuestionarioAPI.pdf</string>

    <!-- Quiz Activity & Fragments -->
    <string name="quiz_next_btn">Próxima</string>
    <string name="quiz_finish_btn">Finalizar</string>
    <!-- Question 1 -->
    <string name="quiz_01">Por quanto tempo você pretende deixar seu dinheiro investido?</string>
    <string name="quiz_01_a">Menos de 6 meses</string>
    <string name="quiz_01_b">Entre 6 meses e 1 ano</string>
    <string name="quiz_01_c">Entre 1 ano e 3 anos</string>
    <string name="quiz_01_d">Mais de 3 anos</string>
    <!-- Question 2 -->
    <string name="quiz_02">Qual o objetivo desse investimento?</string>
    <string name="quiz_02_a">Preservação do capital para não perder valor ao longo do tempo, assumindo baixos riscos de perdas</string>
    <string name="quiz_02_b">Aumento gradual do capital ao longo do tempo, assumindo riscos moderados</string>
    <string name="quiz_02_c">Aumento do capital acima da taxa de retorno média do mercado, mesmo que isso implique assumir riscos de perdas elevadas</string>
    <string name="quiz_02_d">Obter no curto prazo retornos elevados e signicativamente acima da taxa de retorno média do mercado, assumindo riscos elevados</string>
    <!-- Question 3 -->
    <string name="quiz_03">Qual das alternativas melhor classifica sua formação e experiência com o mercado financeiro?</string>
    <string name="quiz_03_a">Não possuo formação acadêmica ou conhecimento do mercado financeiro</string>
    <string name="quiz_03_b">Possuo formação acadêmica na área financeira, mas não tenho experiência com o mercado financeiro</string>
    <string name="quiz_03_c">Possuo formação acadêmica em outra área, mas possuo conhecimento do mercado financeiro</string>
    <string name="quiz_03_d">Possuo formação acadêmica na área financeira ou alto conhecimento do mercado financeiro</string>
    <!-- Question 4 -->
    <string name="quiz_04">Considerando seus rendimentos regulares, qual a porcentagem você pretende reservar para aplicações financeiras?</string>
    <string name="quiz_04_a">No máximo 25%</string>
    <string name="quiz_04_b">Entre 25,01 e 50%</string>
    <string name="quiz_04_c">Acima de 50%</string>
    <!-- Question 5 -->
    <string name="quiz_05">Caso as suas aplicações sofressem uma queda superior a 30%, o que você faria?</string>
    <string name="quiz_05_a">Resgataria toda a aplicação e aplicaria na poupança</string>
    <string name="quiz_05_b">Manteria aplicação aguardando uma melhora do mercado</string>
    <string name="quiz_05_c">Aumentaria a aplicação para aproveitar as oportunidades do mercado</string>
    <!-- Question 6 -->
    <string name="quiz_06">Como está distribuído o seu patrimônio?</string>
    <string name="quiz_06_a">Meu patrimônio não está aplicado ou está todo aplicado em renda fixa e/ou imóveis</string>
    <string name="quiz_06_b">Menos de 25% em renda variável e o restante em renda fixa e/ou imóveis</string>
    <string name="quiz_06_c">Entre 25,01 e 50% aplicado em renda variável e o restante em renda fixa e/ou imóveis</string>
    <string name="quiz_06_d">Acima de 50% em renda variável</string>
    <!-- Question 7 -->
    <string name="quiz_07">Em relação às aplicações e rendimentos, em qual dessas situações você se enquadra?</string>
    <string name="quiz_07_a">Conto com o rendimento dessas aplicações para complementar minha renda mensal</string>
    <string name="quiz_07_b">Eventualmente posso resgatar parte das aplicações para fazer frente aos meus gastos. Contudo, não tenho intenção de resgatar no curto prazo e pretendo fazer aplicações regulares</string>
    <string name="quiz_07_c">Não tenho intenção de resgatar no curto prazo, mas não pretendo realizar novas aplicações</string>
    <string name="quiz_07_d">Não tenho intenção de resgatar no curto prazo e ainda pretendo fazer aplicações regulares</string>
    <!-- Question 8 -->
    <string name="quiz_08">Qual sua faixa média de renda mensal?</string>
    <string name="quiz_08_a">Até R$ 1.212</string>
    <string name="quiz_08_b">De R$ 1.213 até R$ 4.848</string>
    <string name="quiz_08_c">De R$ 4.849 até R$ 9.696</string>
    <string name="quiz_08_d">Acima de R$ 9.696</string>
    <!-- Question 9 -->
    <string name="quiz_09">Qual o valor aproximado do seu patrimônio?</string>
    <string name="quiz_09_a">Até R$ 10.000</string>
    <string name="quiz_09_b">De R$ 10.001 até R$ 100.000</string>
    <string name="quiz_09_c">De R$ 100.001 até R$ 500.000</string>
    <string name="quiz_09_d">De R$ 500.001 até R$ 1.000.000</string>
    <string name="quiz_09_e">Acima de R$ 1.000.001</string>


    <!-- Result Activity -->
    <string name="result_txt">Seu perfil de investidor é:</string>
    <string name="result_profile1">Conservador</string>
    <string name="result_profile2">Moderado</string>
    <string name="result_profile3">Arrojado</string>
    <string name="quiz_03_" />
</resources>
